<resources>
    <string name="app_name">AndroidProject_1</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pregunta">¿Cómo se llama la actriz que hace de viuda negra?</string>
    <string name="imgpregunta">imgPregunta</string>
    <string name="r1button">Angelina Jolie</string>
    <string name="r2button">Scarlett Johansson</string>
    <string name="r3button">Ellen Page</string>
    <string name="ayuda">Ayuda</string>
    <string name="reto2texto">¡Saca una foto de una hoja verde!</string>
    <string name="okbutton">Aceptar</string>
    <string name="camerabutton">camerabutton</string>
    <string name="imagebutton">imagebutton</string>
    <string name="retoText">¡Elige tu reto!</string>
    <string name="reto3pregunta">Calcula esta operación</string>
    <string name="sumatext">+</string>
    <string name="num2">3</string>
    <string name="productotext">x</string>
    <string name="num3">2</string>
    <string name="num1">6</string>
</resources>
